Return references to IntRects to save space in CompositingRequirementsUpdater.

BUG=660097
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2469093002
Cr-Commit-Position: refs/heads/master@{#429142}