third_party/WebKit/Source/core/paint/PaintLayer.h
@@ -718,11 +718,11 @@ class CORE_EXPORT PaintLayer : public DisplayItemClient {
       bool hasRootScrollerAsDescendant);
   void didUpdateCompositingInputs();
 
-  IntRect clippedAbsoluteBoundingBox() const {
+  const IntRect& clippedAbsoluteBoundingBox() const {
     DCHECK(!m_needsAncestorDependentCompositingInputsUpdate);
     return m_ancestorDependentCompositingInputs.clippedAbsoluteBoundingBox;
   }
-  IntRect unclippedAbsoluteBoundingBox() const {
+  const IntRect& unclippedAbsoluteBoundingBox() const {
     DCHECK(!m_needsAncestorDependentCompositingInputsUpdate);
     return m_ancestorDependentCompositingInputs.unclippedAbsoluteBoundingBox;
   }
